# steganography-cpp

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE.md  README.md
include/: consts.h
include/cli/: args.h  helpers.h
include/file/: helpers.h
include/image/: helpers.h  pixel.h
include/image/formats/: base.h  bmp.h  ppm.h
src/: main.cpp
src/cli/: args.cpp  helpers.cpp
src/file/: helpers.cpp
src/image/: helpers.cpp  pixel.cpp
src/image/formats/: base.cpp  bmp.cpp  ppm.cpp
